--- a/template/superb-html-template/css/style.css
+++ b/template/superb-html-template/css/style.css
@@ -262,10 +262,13 @@ header {height:40px}
 
 .logo {
     position: absolute;
-    left: 50%;
+    left: 20%;
     margin:25px 0 0 -90px;
-	z-index:100
+	z-index:100;
 	
+}
+.nav{
+	width: 100% !important;
 }
 .header-top {
 	padding: 0px 0px 0px 0px;
